[workspace]
members = [
    "examples/echo_client_native",
    #"examples/echo_client_wt", # requires wasm32-unknown-unknown target
    "examples/echo_server_cross",
    "demo_chat",
    "demo_bevy",
    "bevy_renet2",
    "renet2",
    "renet2_visualizer",
    "renet2_steam",
    "renetcode2",
]
resolver = "2"
