[package]
name = "bevy_renet2"
description = "Bevy plugin for the renet2 crate"
edition = "2021"
keywords = ["gamedev", "networking"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/UkoeHB/renet2"
version = "0.0.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["transport"]
serde = ["renet2/serde"]
transport = ["renet2/transport"]
native_transport = ["transport", "renet2/native_transport"]
memory_transport = ["transport", "renet2/memory_transport"]
wt_server_transport = ["transport", "renet2/wt_server_transport"]
wt_client_transport = ["transport", "renet2/wt_client_transport"]

[[example]]
name = "simple"
required-features = ["serde", "transport"]

[dependencies]
bevy_app = {version = "0.13", default-features = false}
bevy_ecs = {version = "0.13", default-features = false}
bevy_time = {version = "0.13", default-features = false}
bevy_window = {version = "0.13", default-features = false}
renet2 = {path = "../renet2", version = "0.0.3", default-features = false, features = ["bevy"]}

[dev-dependencies]
bevy = {version = "0.13", default-features = false, features = ["bevy_core_pipeline", "bevy_render", "bevy_asset", "bevy_pbr", "x11", "tonemapping_luts", "ktx2", "zstd"]}
bincode = "1.3"
env_logger = "0.11"
renet2 = {path = "../renet2", version = "0.0.3", default-features = false, features = ["bevy", "memory_transport"]}
serde = {version = "1.0", features = ["derive"]}
tracing-subscriber = { version = "0.3", features = [ "env-filter", "std", "tracing-log" ] }
