[package]
name = "demo_chat"
version = "0.1.0"
authors = ["koe <ukoe@protonmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
renet2 = { path = "../renet2", features = ["transport", "serde"] }
renet2_visualizer = { path = "../renet2_visualizer" }
eframe = "0.26"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
log = { version = "0.4", features = ["std"] }
env_logger = "0.11"
