[package]
name = "renet2"
authors = ["koe <ukoe@protonmail.com>"]
description = "Server/Client network protocol library for multiplayer games, forked from renet"
edition = "2021"
keywords = ["gamedev", "networking"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/UkoeHB/renet2"
version = "0.0.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
bevy = ["dep:bevy_ecs", "dep:bevy_reflect"]
default = ["transport"]
transport = ["dep:renetcode2"]
serde = ["dep:serde"]

[dependencies]
bevy_ecs = { version = "0.13", optional = true }
bevy_reflect = { version = "0.13", optional = true }
bytes = "1.1"
log = "0.4.17"
octets = "0.2"
renetcode2 = { path = "../renetcode2", version = "0.0.1", optional = true }
serde = {version = "1.0", optional = true}

[dev-dependencies]
env_logger = "0.11"
