[package]
name = "renet2_steam"
version = "0.0.1"
keywords = ["gamedev", "networking", "transport"]
description = "steam transport for the renet2 crate"
repository = "https://github.com/UkoeHB/renet2"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
bevy = ["dep:bevy_app", "dep:bevy_ecs", "dep:bevy_renet2"]

[dependencies]
renet2 = { version = "0.0.1", path = "../renet2" }
# its version 0.10 but we need to use the rev because of a missing feature
steamworks = "0.11"
log = "0.4.19"
bevy_ecs = { version = "0.13", optional = true }
bevy_app = { version = "0.13", optional = true }
bevy_renet2 = { version = "0.0.1", optional = true, path = "../bevy_renet2" }

[dev-dependencies]
env_logger = "0.11"
