[package]
name = "renet2_visualizer"
version = "0.0.2"
keywords = ["gamedev", "networking"]
description = "Egui metrics visualizer for the renet2 crate"
repository = "https://github.com/UkoeHB/renet2"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
bevy = ["dep:bevy_ecs"]

[dependencies]
renet2 = { path = "../renet2", version = "0.0.2" }
egui = "0.26"
bevy_ecs = { version = "0.13", optional = true }
