[package]
name = "echo_client_native"
version = "0.1.0"
edition = "2021"
keywords = ["gamedev", "networking", "transport", "example"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/UkoeHB/renet2"
description = "Client example transport for UDP sockets"

[dependencies]
env_logger = "0.11"
futures = "0.3"
log = "0.4"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }

renet2 = { path = "../../renet2", default-features = false, features = ["native_transport"] }
renetcode2 = { path = "../../renetcode2" }
