[package]
name = "echo_client_wt"
version = "0.1.0"
edition = "2021"
keywords = ["gamedev", "networking", "transport", "example"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/UkoeHB/renet2"
description = "Client example transport for WebTransport"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64 = "0.22"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-timer = "0.2"
console_error_panic_hook = "0.1"

renet2 = { path = "../../renet2", default-features = false, features = ["wt_client_transport"] }
renetcode2 = { path = "../../renetcode2" }

#[profile.release]
#panic = "abort"

#[profile.dev]
#panic = "abort"
